--- a/oneui/src/main/AndroidManifest.xml
+++ b/oneui/src/main/AndroidManifest.xml
@@ -1,2 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <application>
+
+        <!-- SamsungBasicInteraction -->
+        <meta-data
+            android:name="SamsungBasicInteraction"
+            android:value="SEP10" />
+
+    </application>
+</manifest>
