app: add Samsung Wallpaper Theme support (One UI 4.x>)
Signed-off-by: BlackMesa123 <giangrecosalvo9@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ChoiDujour">
 
+        <!-- Samsung Color Theme -->
+        <meta-data
+            android:name="theming-meta"
+            android:value="sep_color_theme_meta" />
+        <meta-data
+            android:name="theming-meta-xml"
+            android:value="@xml/sep_color_theme_meta" />
+
+
         <activity
             android:name=".ui.activity.MainActivity"
             android:exported="true">
+
+            <!-- Samsung Icon Color Theme -->
+            <meta-data
+                android:name="com.sec.android.app.launcher.icon_theme"
+                android:value="themeColor" />
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
